# degree-7542-tp

./: README.md
tam/: CMakeLists.txt
tam/scripts/: README  clientInstall.sh  code.sh  serverInstall.sh
tam/src/client/: CMakeLists.txt  main.cpp
tam/src/client/game/commands/: availablesessionscommand.cpp  availablesessionscommand.h  command.cpp  command.h  commandfactory.cpp  commandfactory.h  createmultisessioncommand.cpp  createmultisessioncommand.h  createsinglesessioncommand.cpp  createsinglesessioncommand.h  feedbackcommand.cpp  feedbackcommand.h  joincommand.cpp  joincommand.h  levelcommand.cpp  levelcommand.h  levelcompletedcommand.cpp  levelcompletedcommand.h  levelstartcommand.cpp  levelstartcommand.h  logincommand.cpp  logincommand.h  messagecommand.cpp  messagecommand.h
tam/src/client/game/facade/: commandfacade.cpp  commandfacade.h
tam/src/client/game/model/: gameclient.cpp  gameclient.h  incomingmessagequeue.cpp  incomingmessagequeue.h  message.cpp  message.h  outcomingrequestqueue.cpp  outcomingrequestqueue.h  requestsender.cpp  requestsender.h  serverlistener.cpp  serverlistener.h  session.cpp  session.h
tam/src/client/ui/controllers/: gamewindowcontroller.cpp  gamewindowcontroller.h  initresponse.cpp  initresponse.h  initwindowcontroller.cpp  initwindowcontroller.h  levelmanager.cpp  levelmanager.h  sessiontreemodel.h  uimessages.cpp  uimessages.h
tam/src/client/ui/resources/: dlgInitWindow.glade  feedbackWindow.glade  gameWindow.glade
tam/src/client/ui/widgets/: toolbarexpander.cpp  toolbarexpander.h
tam/src/common/: CMakeLists.txt
tam/src/common/constants/: gameconstants.cpp  gameconstants.h
tam/src/common/logger/: nullstream.h  tri_logger.cpp  tri_logger.h
tam/src/common/protocol/: protocolreceiver.cpp  protocolreceiver.h  protocolsender.cpp  protocolsender.h
tam/src/common/sockets/: data.cpp  data.h  tcpsocket.cpp  tcpsocket.h
tam/src/common/sockets/exceptions/: tcpsocketconnectionclosedexception.cpp  tcpsocketconnectionclosedexception.h  tcpsocketexception.cpp  tcpsocketexception.h
tam/src/common/threads/: thread.cpp  thread.h
tam/src/common/threads/locks/: conditionalwait.cpp  conditionalwait.h  exclusivewritelock.cpp  exclusivewritelock.h  lock.cpp  lock.h  mutex.cpp  mutex.h  readwritelock.cpp  readwritelock.h  sharedreadlock.cpp  sharedreadlock.h
tam/src/common/utils/: collections.h  fileutils.cpp  fileutils.h  math.cpp  math.h  stringutils.cpp  stringutils.h
tam/src/editor/: CMakeLists.txt  main.cpp
tam/src/editor/presentation/: editor.glade  stageeditorgui.h  stageeditorguiglade.cpp  stageeditorguiglade.h  stageeditorhandler.cpp  stageeditorhandler.h
tam/src/game/: CMakeLists.txt
tam/src/game/core/: particle.cpp  particle.h  physicsengine.cpp  physicsengine.h  spring.cpp  spring.h  timedelta.h  vector2d.h
tam/src/game/core/affectors/: constantforceaffector.cpp  constantforceaffector.h  dampingforceaffector.cpp  dampingforceaffector.h  decayingforceaffector.cpp  decayingforceaffector.h  forceaffector.h  gravityforceaffector.cpp  gravityforceaffector.h  springforceaffector.cpp  springforceaffector.h  torqueforceaffector.cpp  torqueforceaffector.h
tam/src/game/design/: elementcontainer.cpp  elementcontainer.h  elementfactory.h
tam/src/game/design/connect/: centerconnectionpoint.cpp  centerconnectionpoint.h  connectionpoint.cpp  connectionpoint.h  fromconnectionpoint.cpp  fromconnectionpoint.h  radiusconnectionpoint.cpp  radiusconnectionpoint.h  rocketposconnectionpoint.cpp  rocketposconnectionpoint.h  toconnectionpoint.cpp  toconnectionpoint.h
tam/src/game/design/elements/: ball.cpp  ball.h  canvastape.cpp  canvastape.h  centerradiuselement.cpp  centerradiuselement.h  connection.cpp  connection.h  element.cpp  element.h  exitarea.cpp  exitarea.h  fixedpoint.cpp  fixedpoint.h  fromtoelement.cpp  fromtoelement.h  mass.cpp  mass.h  metalbar.cpp  metalbar.h  metalplatform.cpp  metalplatform.h  obstacle.cpp  obstacle.h  rectangularelement.cpp  rectangularelement.h  rocket.cpp  rocket.h  rope.cpp  rope.h  stringelement.cpp  stringelement.h  wheel.cpp  wheel.h
tam/src/game/design/move/: centermovepoint.cpp  centermovepoint.h  frommovepoint.cpp  frommovepoint.h  fromtomovepoint.cpp  fromtomovepoint.h  movepoint.cpp  movepoint.h  radiusmovepoint.cpp  radiusmovepoint.h  rocketposmovepoint.cpp  rocketposmovepoint.h  rockettargetmovepoint.cpp  rockettargetmovepoint.h  tomovepoint.cpp  tomovepoint.h
tam/src/game/logic/: designtoolbox.cpp  designtoolbox.h  gameengine.cpp  gameengine.h
tam/src/game/logic/properties/: centerradiuselementproperties.cpp  centerradiuselementproperties.h  elementproperties.cpp  elementproperties.h  fromtoelementproperties.cpp  fromtoelementproperties.h  (+8 more)
tam/src/game/serialization/: businessdelegate.cpp  businessdelegate.h
tam/src/server/: CMakeLists.txt  main.cpp  server.cpp  server.h
tam/src/server/game/: gameserver.cpp  gameserver.h
tam/src/ui/: CMakeLists.txt
tam/src/ui/controllers/: ballcreatorinputhandler.cpp  ballcreatorinputhandler.h  canvastapecreatorinputhandler.cpp  canvastapecreatorinputhandler.h  configurablerenderareacontroller.cpp  configurablerenderareacontroller.h  connectinputhandler.cpp  connectinputhandler.h  controllers.h  deleteinputhandler.cpp  deleteinputhandler.h  exitareacreatorinputhandler.cpp  exitareacreatorinputhandler.h  fixedpointcreatorinputhandler.cpp  fixedpointcreatorinputhandler.h  masscreatorinputhandler.cpp  masscreatorinputhandler.h  metalbarcreatorinputhandler.cpp  metalbarcreatorinputhandler.h  metalplatformcreatorinputhandler.cpp  metalplatformcreatorinputhandler.h  moveinputhandler.cpp  moveinputhandler.h  obstaclecreatorinputhandler.cpp  obstaclecreatorinputhandler.h  renderareainputhandler.h  rocketcreatorinputhandler.cpp  rocketcreatorinputhandler.h  ropecreatorinputhandler.cpp  ropecreatorinputhandler.h  wheelcreatorinputhandler.cpp  wheelcreatorinputhandler.h
tam/src/ui/views/: backgroundrenderer.cpp  backgroundrenderer.h  blueprintrenderer.cpp  blueprintrenderer.h  color.cpp  color.h  gamerenderarea.cpp  gamerenderarea.h  renderer.h
(+120 files in other folders)
